--- a/ftagged/package.json
+++ b/ftagged/package.json
@@ -3,10 +3,18 @@
   "version": "1.0.0-alpha.2",
   "description": "",
   "main": "ftagged.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tolmasky/ftagged"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Francisco Ryan Tolmasky I <tolmasky@gmail.com> (https://tolmasky.com/)",
+  "author": {
+    "name": "Francisco Ryan Tolmasky I",
+    "email": "tolmasky@gmail.com",
+    "url": "https://tolmasky.com"
+  },
   "license": "MIT"
 }
